--- a/index.html
+++ b/index.html
@@ -3,5 +3,9 @@
 # Edit theme's home layout instead if you wanna make some changes
 # See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 layout: home
+title: IntoTheCloud
+header:
+  image: /assets/images/bernd-dittrich-Nf6-e1TO3HY-unsplash.jpg
+  caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
 author_profile: true
 ---
