--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 layout: home
 title: IntoTheCloud
 header:
-  image: /assets/images/bernd-dittrich-Nf6-e1TO3HY-unsplash.jpg
+  overlay_image: /assets/images/bernd-dittrich-Nf6-e1TO3HY-unsplash.jpg
   caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
 author_profile: true
 ---
