--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@ author_profile: true
 <body>
 
     <header>
-        <h1>Your Header</h1>
+        <h1>Welcome!</h1>
     </header>
 
     <main>
-        <p>Your short message goes here.</p>
+        <p>Welcome to my website</p>
     </main>
 
 </body>
