--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@ header:
 author_profile: true
 
 ---
-
+<html lang="{{ site.locale | slice: 0,2 | default: "en" }}" class="no-js">
+  <head>
+    {% include head.html %}
+    {% include head/custom.html %}
+  </head>
 <body>
 
     <header>
@@ -21,3 +25,5 @@ author_profile: true
     </main>
 
 </body>
+
+</html>
