--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 # Edit theme's home layout instead if you wanna make some changes
 # See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 layout: home
-title: IntoTheCloud
+title: Home
 header:
   overlay_image: /assets/images/bernd-dittrich-Nf6-e1TO3HY-unsplash.jpg
 author_profile: true
@@ -21,7 +21,7 @@ author_profile: true
     </header>
 
     <main>
-        <p>Welcome to my website</p>
+        <p>Welcome to my website.</p>
     </main>
 
 </body>
