--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 # You don't need to edit this file, it's empty on purpose.
 # Edit theme's home layout instead if you wanna make some changes
 # See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
-layout: home
+layout: Splash
 title: Home
 header:
   overlay_image: /assets/images/bernd-dittrich-Nf6-e1TO3HY-unsplash.jpg
